--- a/test/test.less
+++ b/test/test.less
@@ -8,9 +8,10 @@
 //////////
 
 // Specify the number of columns and set column and gutter widths
+@grid-units : 1em; //16px
 @columns: 12;
-@column-width: 60;
-@gutter-width: 20;
+@column-width: 3;
+@gutter-width: 2;
 
 // Uncomment the definition below for a percentage-based layout
 // @total-width: 100%;
