--- a/stylesheets/less/grid.less
+++ b/stylesheets/less/grid.less
@@ -46,8 +46,8 @@ body {
 
 .row(@columns:@columns) {
 	display: block;
-	width: @total-width*((@gutter-width + @gridsystem-width)/@gridsystem-width);
-	margin: 0 @total-width*(((@gutter-width*.5)/@gridsystem-width)*-1);
+	width: @total-width*((@gridsystem-width)/@gridsystem-width);
+	margin-left: @total-width*(((@gutter-width*.5)/@gridsystem-width)*-1);
 	// *width: @total-width*((@gutter-width + @gridsystem-width)/@gridsystem-width)-@correction;
 	// *margin: 0 @total-width*(((@gutter-width*.5)/@gridsystem-width)*-1)-@correction;
 	.clearfix;
