--- a/test/test.less
+++ b/test/test.less
@@ -23,7 +23,7 @@
 
 // center the contents
 div.center {
-	width: 960px;
+	width: 58em;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -40,4 +40,8 @@ header#top {
 }
 #sidebar {
 	.column(3);
+}
+
+div.wrapper{
+	.row();
 }
