--- a/test/test.less
+++ b/test/test.less
@@ -26,22 +26,27 @@ div.center {
 	width: 58em;
 	margin: 0 auto;
 	overflow: hidden;
+	max-width:100%;
 }
 
 // header
 header#top {
 	.column(12);
+	.column_mob(4);
 	margin-bottom: 1em;
 }
 
 // main and sidebar
 #maincolumn {
 	.column(9);
+	.column_mob(3);
 }
 #sidebar {
 	.column(3);
+	.column_mob(1);
 }
 
 div.wrapper{
 	.row();
 }
+
